5 - Notebooks e Data/1 - Análises numéricas/Arquivos David/Atualizados/logDicas-master/data/2019-1/223/users/3113/executions/1835_2221.log
== TEST (2019-07-02 12:32:54) 
-- CODE:
from numpy import*
from numpy.linalg import*

m=array(eval(input("")))

s=m.shape[0]
f=0
for i in range(s):
	f=sum(m[i,:])/size(m)
	print(f)
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-07-02 12:33:11) 
-- CODE:
from numpy import*
from numpy.linalg import*

m=array(eval(input("")))

s=m.shape[0]
f=0
for i in range(s):
	f=sum(m[i,:])/size(m)
	print(f)
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-07-02 12:34:52) 
-- CODE:
from numpy import*
from numpy.linalg import*

m=array(eval(input("")))

s=m.shape[0]
f=0
for i in range(s):
	f=min(m[i,:])/size(m)
	d=d+
print(f)
-- ERROR:
File "XXXX", line 10
    d=d+
       ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-07-02 12:34:56) 
-- CODE:
from numpy import*
from numpy.linalg import*

m=array(eval(input("")))

s=m.shape[0]
f=0
for i in range(s):
	f=min(m[i,:])/size(m)
	d=d+f
print(f)
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-07-02 12:35:06) 
-- CODE:
from numpy import*
from numpy.linalg import*

m=array(eval(input("")))

s=m.shape[0]
f=0
d=0
for i in range(s):
	f=min(m[i,:])/size(m)
	d=d+f
print(f)
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-07-02 12:35:25) 
-- CODE:
from numpy import*
from numpy.linalg import*

m=array(eval(input("")))

s=m.shape[0]
f=0
d=0
for i in range(s):
	f=min(m[i,:])/size(m)
	d=d+f
print(d)
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-07-02 12:35:31) 
-- CODE:
from numpy import*
from numpy.linalg import*

m=array(eval(input("")))

s=m.shape[0]
f=0
d=0
for i in range(s):
	f=min(m[i,:])
	d=d+f
print(d)
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-07-02 12:36:27) 
-- CODE:
from numpy import*
from numpy.linalg import*

m=array(eval(input("")))

s=m.shape[0]
f=0
d=0
for i in range(s):
	f=min(m[i,:])
	d=d+f
p=d/size(s)
print(round(d,2))
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-07-02 12:36:34) 
-- CODE:
from numpy import*
from numpy.linalg import*

m=array(eval(input("")))

s=m.shape[0]
f=0
d=0
for i in range(s):
	f=min(m[i,:])
	d=d+f
p=d/size(s)
print(round(p,2))
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-07-02 12:36:57) 
-- CODE:
from numpy import*
from numpy.linalg import*

m=array(eval(input("")))

s=m.shape[0]
f=0
d=0
for i in range(s):
	f=min(m[i,:])
	d=d+f
p=d/size(s)
print(round(s,2))
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-07-02 12:37:05) 
-- CODE:
from numpy import*
from numpy.linalg import*

m=array(eval(input("")))

s=m.shape[0]
f=0
d=0
for i in range(s):
	f=min(m[i,:])
	d=d+f
p=d/size(s)
print(round(p,2))
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-07-02 12:37:38) 
-- CODE:
from numpy import*
from numpy.linalg import*

m=array(eval(input("")))

s=m.shape[0]
f=0
d=0
for i in range(s):
	f=min(m[i,:])
	d=d+f
p=d/size(s)
print(round(p,2))
-- EXECUTION TIME:
1.32142
-- TEST CASE 1:
---- input:
[[8.9,7.3,5.2,7.7],[10.0,5.6,8.8,9.5],[3.2,5.6,7.8,8.7]]
---- correct output:
4.67
---- user output:
14.0
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-07-02 12:37:44) 
-- CODE:
from numpy import*
from numpy.linalg import*

m=array(eval(input("")))

s=m.shape[0]
f=0
d=0
for i in range(s):
	f=min(m[i,:])
	d=d+f
p=d/size(s)
print(p))
-- ERROR:
File "XXXX", line 13
    print(p))
            ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-07-02 12:37:51) 
-- CODE:
from numpy import*
from numpy.linalg import*

m=array(eval(input("")))

s=m.shape[0]
f=0
d=0
for i in range(s):
	f=min(m[i,:])
	d=d+f
p=d//size(s)
print(p)
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-07-02 12:38:02) 
-- CODE:
from numpy import*
from numpy.linalg import*

m=array(eval(input("")))

s=m.shape[0]
f=0
d=0
for i in range(s):
	f=min(m[i,:])
	d=d+f
p=d
print(p)
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-07-02 12:38:28) 
-- CODE:
from numpy import*
from numpy.linalg import*

m=array(eval(input("")))

s=m.shape[0]
f=0
d=0
for i in range(s):
	f=min(m[i,:])
	d=d+f
p=d
print(p/s)
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-07-02 12:38:43) 
-- CODE:
from numpy import*
from numpy.linalg import*

m=array(eval(input("")))

s=m.shape[0]
f=0
d=0
for i in range(s):
	f=min(m[i,:])
	d=d+f
p=d
print(round(p/s,2))
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-07-02 12:38:50) 
-- CODE:
from numpy import*
from numpy.linalg import*

m=array(eval(input("")))

s=m.shape[0]
f=0
d=0
for i in range(s):
	f=min(m[i,:])
	d=d+f
p=d
print(round(p/s,2))
-- EXECUTION TIME:
1.06861
-- TEST CASE 1:
---- input:
[[8.9,7.3,5.2,7.7],[10.0,5.6,8.8,9.5],[3.2,5.6,7.8,8.7]]
---- correct output:
4.67
---- user output:
4.67
-- GRADE:
100%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
